[package]
name = "hex-server"
version = "0.1.0"
authors = ["benwiz <bwisialowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
env_logger = "0.7.1"
websocket = "0.24.0"
serde = "1.0.105"
serde_json = "1.0"
evmap = "9.0.0"
sled = "0.31.0"
