[package]
name = "hex-server"
version = "0.1.0"
authors = ["benwiz <bwisialowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
env_logger = "0.7.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sled = "0.31.0"
bincode = "1.0"
uuid = { version = "0.8.1", features = ["v4"] }